--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,10 @@
-certifi
-chardet
-click
-flask
-future
-idna
-itsdangerous
-jinja2
-markupsafe
-line-bot-sdk
-requests
-urllib3
-werkzeug
+line-bot-sdk==1.8.0
 openai==0.27.0
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
 
